[project]
name = "biomed-rag-assistant"
version = "0.1.0"
description = "AI-powered research assistant for biomedical literature using RAG"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "İpek Erdem"}
]

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]

testpaths = ["tests"]
